SQL  function complete

--- a/SQL/SQL FUNCTIONS.ipynb
+++ b/SQL/SQL FUNCTIONS.ipynb
@@ -225,6 +225,185 @@
     "  rank() over(partition by Region order by SalsAmount desc) as rank\n",
     "from Employee_Sales;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "89a7d602-d880-441f-bd56-5190d4d10937",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--9.\tWrite a query to return the previous and next SalesAmount for each employee using LAG() and LEAD().\n",
+    "select \n",
+    "  Name,\n",
+    "  SalsAmount,\n",
+    "  lag(SalsAmount) over(order by SalsAmount) as previous_SalsAmount,\n",
+    "  lead(SalsAmount) over(order by SalsAmount) as next_SalsAmount\n",
+    "from Employee_Sales;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "10603230-21d0-4a2c-b3d0-650be6459733",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--10.\tWrite a query to calculate the running total of SalesAmount by Department.\n",
+    "select\n",
+    "  Department,\n",
+    "  SalsAmount,\n",
+    "  sum(SalsAmount) over (partition by Department order by SalsAmount) as running_total\n",
+    "from Employee_Sales;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e5b4e00f-47e2-4b3c-bc6c-8786387da90f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--11.\tWrite a query to return the first SalesAmount in each Region using FIRST_VALUE().\n",
+    "select\n",
+    "   Region,\n",
+    "  FIRST_VALUE(SalsAmount) over(partition by Region order by SalsAmount) as first_SalsAmount\n",
+    "from Employee_Sales;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5f68a326-3b62-4f9b-af51-7c7c71e4c900",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--12.\tWrite a query to return the last SalesAmount in each Region using LAST_VALUE().\n",
+    "SELECT \n",
+    "  Region,\n",
+    "  LAST_VALUE(SalsAmount) OVER (\n",
+    "    PARTITION BY Region \n",
+    "    ORDER BY SalsAmount \n",
+    "    ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING\n",
+    "  ) AS last_SalsAmount\n",
+    "FROM Employee_Sales;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "150fb838-e1a2-43b3-95d0-e99e36dc4176",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--13.\tWrite a query to divide employees into 3 groups based on SalesAmount using NTILE(3).\n",
+    "SELECT SalsAmount,NTILE(3) OVER (ORDER BY SalsAmount) AS SalesAmount\n",
+    "from Employee_Sales;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "14529ecf-ae28-4004-a697-c95dae1198b1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--14.\tWrite a query to extract the first three characters of each employee’s name.\n",
+    "select  \n",
+    "  left(Name ,3) EmployeeFirstthreecharacter\n",
+    "from employee_sales;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ff05d75d-463c-4b10-aeeb-4a2554a9812e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--15.\tWrite a query to display the current system date and time for each row.\n",
+    "select \n",
+    "  getdate() as current_date_time\n",
+    " \n",
+    "from Employee_Sales;"
+   ]
   }
  ],
  "metadata": {
